DAV: fix crash if Collection disappears during Item fetch

BUG: 360792
FIXED-IN: 5.6.2